--- a/tests/examples/source/devfiles/springboot/devfile.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile.yaml
@@ -33,6 +33,8 @@ components:
         - name: springbootpvc
           path: /data
       mountSources: false
+  - volume:
+      name: springbootpvc
 commands:
   - exec:
       id: defaultBuild
