--- a/tests/examples/source/devfilesV2/nodejs/devfile-no-dockerfile.yaml
+++ b/tests/examples/source/devfilesV2/nodejs/devfile-no-dockerfile.yaml
@@ -1,7 +1,7 @@
 schemaVersion: "2.0.0"
 metadata:
   name: test-devfile
-  alpha.build-dockerfile: "https://raw.githubusercontent.com/neeraj-laad/nodejs-stack-registry/build-deploy/devfiles/nodejs-basic/build/Dockerfile"
+  alpha.deployment-manifest: "https://raw.githubusercontent.com/groeges/devfile-registry/master/devfiles/nodejs/deploy_deployment.yaml"
 projects:
   - name: nodejs-web-app
     git: 
