Add support for composite commands on Kubernetes (#3551)
* Add validation for composite commands

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Composite command exec shell

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Prevent NPE

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Implement composite command execution

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Move composite command func to exec package

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Fix error handling for parallel execution

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Unit tests for composite commands

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Add some comments

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Comment for mock client

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Remove unused code

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Clean up

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Add integration test for composite commands

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Fix broken integration test

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Don't allow composite run commands at this time

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Use util.ConcurrentTask to run parallel commands

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Integration test for parallel composite commands

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Disable composite run command

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Address review comments

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Address review comments

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Fix string comparison

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Add unit tests for command help funcs

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Remove unused function

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* F

--- a/tests/examples/source/devfiles/nodejs/devfileCompositeCommandsParallel.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileCompositeCommandsParallel.yaml
@@ -1,6 +1,7 @@
 schemaVersion: 2.0.0
 metadata:
   name: nodejs
+  version: 1.0.0
 projects:
   - name: nodejs-starter
     git:
@@ -11,44 +12,42 @@ components:
       image: registry.access.redhat.com/ubi8/nodejs-12:1-36
       memoryLimit: 1024Mi
       mountSources: true
+      endpoints:
+        - name: http-3000
+          targetPort: 3000
+          configuration:
+            protocol: tcp
+            scheme: http
+            type: terminal
 commands:
   - exec:
-      id: devbuild
+      id: install
       component: runtime
       commandLine: npm install
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: build
-        isDefault: true
+        isDefault: false
   - exec:
-      id: devrun
+      id: mkdir
+      component: runtime
+      commandLine: mkdir /projects/testfolder
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      group:
+        kind: build
+        isDefault: false
+  - exec:
+      id: run
       component: runtime
       commandLine: npm start
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: run
         isDefault: true
-  - exec:
-      id: test1
-      component: runtime
-      commandLine: "mkdir test1"
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
-      group:
-        kind: test
-        isDefault: true
-  - exec:
-      id: test2
-      component: runtime
-      commandLine: "mkdir test2"
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
-      group:
-        kind: test
   - composite:
-         id: compositetest
+         id: buildAndMkdir
          label: Build and Mkdir
          commands:
-           - test1
-           - test2
-         parallel: false
-         group: 
-            kind: test
+           - mkdir
+           - install
+         parallel: true
