Use volume components from the devfile (#3584)
* Volume components devfile

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Volume Component integration tests

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Vol Component Feedback 1

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Vol Component Feedback 2

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Vol Component Feedback 3

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Container component volMount & volume component dependency

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Fix rebased test

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Remove devfile v1 tests

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update rebased tests

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-volume-components.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volume-components.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.0.0
 metadata:
-  name: nodejs
+  name: test-devfile
 projects:
   - name: nodejs-starter
     git:
@@ -21,7 +21,7 @@ components:
           targetPort: 3000
       mountSources: true
       volumeMounts:
-        - name: myvol
+        - name: firstvol
           path: /data
   - container:
       name: runtime2
@@ -29,15 +29,15 @@ components:
       memoryLimit: 1024Mi
       mountSources: false
       volumeMounts:
-        - name: myvol
+        - name: firstvol
           path: /data
-        - name: myvol2
+        - name: secondvol
           path: /data2
   - volume:
-      name: myvol
-      size: 3Gi
+      name: firstvol
   - volume:
-      name: myvol2
+      name: secondvol
+      size: 3Gi
 commands:
   - exec:
       id: devbuild
