--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ jobs:
         - make bin
         - sudo cp odo /usr/bin
         - odo login -u developer
+        - oc version
         - travis_wait make test-generic
         - travis_wait make test-cmd-login-logout
         - travis_wait make test-cmd-cmp
