Remove deprecated images and update tests (#3587)
* Remove deprecated nodejs 8 images

* Update README

* Updated README

* Addressed review comments

* Fixing unit test failure

* Addressed review comment

* Fixing travis failure

* Checking oc version

* Applying supported image imagestream

* Applying supported image imagestream

* Added supported is

* Debugging

* Cleanup

* Updated test doc

* Cleanup

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,7 @@ jobs:
       name: "generic, login and component command integration tests"
       script:
         - ./scripts/oc-cluster.sh
+        - make configure-supported-311-is
         - make bin
         - sudo cp odo /usr/bin
         - odo login -u developer
@@ -79,6 +80,7 @@ jobs:
       name: "preference, config, url and debug command integration tests"
       script:
         - ./scripts/oc-cluster.sh
+        - make configure-supported-311-is
         - make bin
         - sudo cp odo /usr/bin
         - odo login -u developer
@@ -95,6 +97,7 @@ jobs:
       name: "service, link and component sub-commands command integration tests"
       script:
         - ./scripts/oc-cluster.sh service-catalog
+        - make configure-supported-311-is
         - make bin
         - sudo cp odo /usr/bin
         - odo login -u developer
@@ -108,6 +111,7 @@ jobs:
       name: "watch, storage, app, project and push command integration tests"
       script:
         - ./scripts/oc-cluster.sh
+        - make configure-supported-311-is
         - make bin
         - sudo cp odo /usr/bin
         - odo login -u developer
@@ -127,6 +131,7 @@ jobs:
       name: "devfile catalog, create, push, delete, registry, test, log and docker devfile url command integration tests"
       script:
         - ./scripts/oc-cluster.sh
+        - make configure-supported-311-is
         - make bin
         - sudo cp odo /usr/bin
         - travis_wait make test-cmd-docker-devfile-url-pushtarget
@@ -148,6 +153,7 @@ jobs:
       name: "core beta, java, source e2e tests"
       script:
         - ./scripts/oc-cluster.sh
+        - make configure-supported-311-is
         - make bin
         - sudo cp odo /usr/bin
         - odo login -u developer
