--- a/.travis.yml
+++ b/.travis.yml
@@ -203,6 +203,7 @@ jobs:
         - make bin
         - sudo cp odo /usr/bin
         - export KUBERNETES=true
+        - travis_wait make test-cmd-project
         - travis_wait make test-cmd-devfile-catalog
         - travis_wait make test-cmd-devfile-watch
         - travis_wait make test-cmd-devfile-push
