--- a/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
@@ -31,6 +31,28 @@ commands:
       component: runtime
       workingDir: /
   - exec:
+      id: myPreStop
+      commandLine: echo I am a PreStop
+      component: tools
+      workingDir: /
+  - exec:
+      id: secondPreStop
+      commandLine: echo I am also a PreStop
+      component: runtime
+      workingDir: /
+  - exec:
+      id: thirdPreStop
+      commandLine: echo I am a third PreStop
+      component: runtime
+      workingDir: /
+  - composite:
+      id: myCompCmd
+      label: Build and Mkdir
+      commands:
+        - secondPreStop
+        - thirdPreStop
+      parallel: true
+  - exec:
       id: devbuild
       component: runtime
       commandLine: npm install
@@ -63,4 +85,7 @@ commands:
 events:
   postStart:
     - "myPostStart" 
-    - "secondPostStart"
+    - "secondpoststart"
+  preStop:
+    - "myCompCmd" 
+    - "myPreStop"
