--- a/.travis.yml
+++ b/.travis.yml
@@ -128,7 +128,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, delete, registry, test, log and docker devfile url command integration tests"
+      name: "devfile catalog, create, push, delete, registry, test, log, env and docker devfile url command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make configure-supported-311-is
@@ -146,6 +146,7 @@ jobs:
         - travis_wait make test-cmd-devfile-test
         - travis_wait make test-cmd-devfile-log
         - travis_wait make test-cmd-devfile-exec
+        - travis_wait make test-cmd-devfile-env
         - odo logout
 
     - <<: *base-test
