Revert "Remove configuration from devfiles"
This reverts commit 06392ded6e68451e339a27233953c19a68423b40.

--- a/tests/examples/source/devfiles/nodejs/devfile-with-post-start.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-post-start.yaml
@@ -12,6 +12,9 @@ components:
       memoryLimit: 1024Mi
       endpoints:
         - name: "3000/tcp"
+          configuration:
+            protocol: tcp
+            scheme: http
           targetPort: 3000 
       mountSources: true
   - container:
