--- a/tests/examples/source/devfiles/nodejs/devfileSourceMapping.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileSourceMapping.yaml
@@ -15,6 +15,11 @@ components:
       sourceMapping: /test
       endpoints:
         - name: "nodejs"
+          configuration:
+            discoverable: false
+            public: true
+            protocol: tcp
+            scheme: http
           targetPort: 3000
 commands:
   - exec:
