--- a/tests/examples/source/devfiles/nodejs/devfile-without-devinit.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-without-devinit.yaml
@@ -15,6 +15,9 @@ components:
           value: "bar"
       endpoints:
         - name: "3000/tcp"
+          configuration:
+            protocol: tcp
+            scheme: http
           targetPort: 3000
       mountSources: true
 commands:
