--- a/tests/examples/source/devfiles/nodejs/devfileCompositeRun.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileCompositeRun.yaml
@@ -15,6 +15,10 @@ components:
       endpoints:
         - name: http-3000
           targetPort: 3000
+          configuration:
+            protocol: tcp
+            scheme: http
+            type: terminal
 commands:
   - exec:
       id: install
