--- a/tests/examples/source/devfiles/springboot/devfile.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile.yaml
@@ -25,6 +25,9 @@ components:
       args: [ '-f', '/dev/null']
       endpoints:
         - name: "8080/tcp"
+          configuration:
+            protocol: tcp
+            scheme: http
           targetPort: 8080
       volumeMounts:
         - name: springbootpvc
