--- a/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
@@ -31,6 +31,11 @@ commands:
       component: runtime
       workingDir: /
   - exec:
+      id: wrongPostStart
+      commandLine: echo I am also a PostStart
+      component: wrongruntime
+      workingDir: /
+  - exec:
       id: myPreStop
       commandLine: echo I am a PreStop
       component: tools
@@ -50,6 +55,13 @@ commands:
       label: Build and Mkdir
       commands:
         - secondPreStop
+        - thirdPreStop
+      parallel: true
+  - composite:
+      id: myWrongCompCmd
+      label: Build and Mkdir
+      commands:
+        - secondPreStopisWrong
         - thirdPreStop
       parallel: true
   - exec:
