--- a/tests/examples/source/devfiles/nodejs/devfile-with-restart.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-restart.yaml
@@ -16,7 +16,7 @@ commands:
       id: devbuild
       component: runtime
       commandLine: npm install
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}/nodejs-starter
       group:
         kind: build
         isDefault: true
@@ -26,7 +26,7 @@ commands:
         restart: "false"
       component: runtime
       commandLine: npm start
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}/nodejs-starter
       group:
         kind: run
         isDefault: true
