--- a/tests/examples/source/devfiles/nodejs/devfile-with-debugrun.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-debugrun.yaml
@@ -19,7 +19,7 @@ commands:
       id: devbuild
       component: runtime
       commandLine: npm install
-      workingDir: ${PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}
       group:
         kind: build
         isDefault: true
@@ -27,7 +27,7 @@ commands:
       id: devrun
       component: runtime
       commandLine: npm start
-      workingDir: ${PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}
       group:
         kind: run
         isDefault: true
@@ -35,7 +35,7 @@ commands:
       id: debugrun
       component: runtime
       commandLine: npm run debug
-      workingDir: ${PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}
       group:
         kind: debug
         isDefault: true
