--- a/tests/examples/source/devfiles/nodejs/devfile-without-devinit.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-without-devinit.yaml
@@ -22,7 +22,7 @@ commands:
       id: devbuild
       component: runtime
       commandLine: npm install
-      workingDir: ${PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}
       group:
         kind: build
         isDefault: true
@@ -30,7 +30,7 @@ commands:
       id: devrun
       component: runtime
       commandLine: npm start
-      workingDir: ${PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}
       group:
         kind: run
         isDefault: true
