Update more sample devfiles
Signed-off-by: John Collier <John.J.Collier@ibm.com>

--- a/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
@@ -37,7 +37,7 @@ commands:
       id: defaultBuild
       component: tools
       commandLine: "/artifacts/bin/build-container-full.sh"
-      workingDir: /projects/springbootproject
+      workingDir: /projects
       group:
         kind: build
         isDefault: true
