--- a/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
@@ -2,7 +2,7 @@
 schemaVersion: 2.0.0
 metadata:
   name: foobar-
-projects:
+starterProjects:
   - name: springbootproject
     git:
       location: "https://github.com/maysunfaisal/springboot.git"
