Make the file sync destination more consistent (#3662)
* Make the file sync destination more consistent

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Update tests to use PROJECTS_ROOT

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Fix workdir in tests

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Remove more references to nodejs-starter

Signed-off-by: John Collier <John.J.Collier@ibm.com>

* Update more sample devfiles

Signed-off-by: John Collier <John.J.Collier@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-parent.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-parent.yaml
@@ -9,7 +9,7 @@ commands:
       id: devBuild
       component: runtime
       commandLine: touch blah.js
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${PROJECTS_ROOT}
       group:
         kind: build
         isDefault: false
