update the devfile
Signed-off-by: Stephanie <stephanie.cao@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-multiple-endpoints.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-multiple-endpoints.yaml
@@ -25,7 +25,7 @@ commands:
       id: devbuild
       component: runtime
       commandLine: npm install
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${CHE_PROJECTS_ROOT}
       group:
         kind: build
         isDefault: true
@@ -33,14 +33,14 @@ commands:
       id: build
       component: runtime
       commandLine: npm install
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${CHE_PROJECTS_ROOT}
       group:
         kind: build
   - exec:
       id: devrun
       component: runtime
       commandLine: npm start
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${CHE_PROJECTS_ROOT}
       group:
         kind: run
         isDefault: true
@@ -48,6 +48,6 @@ commands:
       id: run
       component: runtime
       commandLine: npm start
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      workingDir: ${CHE_PROJECTS_ROOT}
       group:
         kind: run
