--- a/.travis.yml
+++ b/.travis.yml
@@ -130,7 +130,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, delete, registry, test, env and log command integration tests"
+      name: "devfile catalog, create, push, delete, registry, test, env, config and log command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make configure-supported-311-is
@@ -151,6 +151,7 @@ jobs:
         - travis_wait make test-cmd-devfile-log
         - travis_wait make test-cmd-devfile-exec
         - travis_wait make test-cmd-devfile-env
+        - travis_wait make test-cmd-devfile-config
         - odo logout
 
     - <<: *base-test
