--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,9 @@ jobs:
         - travis_wait make test-cmd-url
         - travis_wait make test-cmd-devfile-url
         - travis_wait make test-cmd-debug
+        - travis_wait make test-cmd-debug-serial
         - travis_wait make test-cmd-devfile-debug
+        - travis_wait make test-cmd-devfile-debug-serial
         - travis_wait make test-cmd-devfile-storage
         - odo logout
 
@@ -130,7 +132,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, delete, registry, test, env, config and log command integration tests"
+      name: "devfile catalog, create, push, watch, delete, registry, exec, test, env and log command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make configure-supported-311-is
@@ -211,14 +213,5 @@ jobs:
         - sudo cp odo /usr/bin
         - export KUBERNETES=true
         - travis_wait make test-cmd-project
-        - travis_wait make test-cmd-devfile-catalog
-        - travis_wait make test-cmd-devfile-watch
-        - travis_wait make test-cmd-devfile-push
-        - travis_wait make test-cmd-devfile-debug
-        - travis_wait make test-cmd-devfile-exec
-        - travis_wait make test-cmd-devfile-delete
-        - travis_wait make test-cmd-devfile-create
-        - travis_wait make test-cmd-devfile-url
-        - travis_wait make test-cmd-devfile-test
-        - travis_wait make test-cmd-devfile-log
-        - travis_wait make test-cmd-devfile-storage
+        - travis_wait make test-integration-devfile
+        - travis_wait make test-cmd-devfile-debug-serial
