Update and rebase
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
@@ -26,7 +26,7 @@ commands:
       component: tools
   - exec:
       id: secondPreStart
-      commandLine: echo I am also a myPreStart
+      commandLine: echo hello test >> $PROJECTS_ROOT/test.txt
       component: runtime
       workingDir: /
   - composite:
