Fixing rvm error and Docker file format for travis login (#3813)
* Fixing rvm error and Docker file format for travis login

* Removed duplicate dependencies

--- a/openshift-ci/build-root/Dockerfile.travislogin
+++ b/openshift-ci/build-root/Dockerfile.travislogin
@@ -2,9 +2,28 @@
 
 FROM registry.svc.ci.openshift.org/openshift/release:golang-1.13
 
-RUN yum -y install sudo make wget gcc git httpd-tools ruby ruby-devel gcc-c++ patch \
-    readline readline-devel zlib zlib-devel libffi-devel openssl-devel make bzip2 \
-    autoconf automake libtool bison sqlite-devel
+RUN yum install sudo -y \
+    make \
+    wget \
+    gcc \
+    git \
+    httpd-tools \
+    ruby \
+    ruby-devel \
+    gcc-c++ \
+    patch \
+    readline \
+    readline-devel \
+    zlib \
+    zlib-devel \
+    libffi-devel \
+    openssl-devel \
+    bzip2 \
+    autoconf \
+    automake \
+    libtool \
+    bison \
+    sqlite-devel
 
 RUN sudo curl -sSL https://rvm.io/mpapis.asc | gpg2 --import -
 RUN sleep 5
@@ -12,12 +31,9 @@ RUN sudo curl -sSL https://rvm.io/pkuczynski.asc | gpg2 --import -
 
 RUN curl -L get.rvm.io | bash -s stable
 
-RUN source /etc/profile.d/rvm.sh \
-    rvm reload
-
-RUN rvm requirements run
-RUN rvm install 2.7
-
-RUN ruby --version
-
-RUN gem install travis --pre --no-document
+RUN source /etc/profile.d/rvm.sh
+RUN /bin/bash -l -c "rvm reload && \
+    rvm requirements run && \
+    rvm install 2.7 && \
+    ruby --version && \
+    gem install travis --pre --no-document"
