--- a/.travis.yml
+++ b/.travis.yml
@@ -213,5 +213,5 @@ jobs:
         - sudo cp odo /usr/bin
         - export KUBERNETES=true
         - travis_wait make test-cmd-project
-        - travis_wait make test-integration-devfile
+        - travis_wait 45 make test-integration-devfile
         - travis_wait make test-cmd-devfile-debug-serial
