--- a/.travis.yml
+++ b/.travis.yml
@@ -90,9 +90,6 @@ jobs:
         - travis_wait make test-cmd-devfile-url
         - travis_wait make test-cmd-debug
         - travis_wait make test-cmd-debug-serial
-        - travis_wait make test-cmd-devfile-debug
-        - travis_wait make test-cmd-devfile-debug-serial
-        - travis_wait make test-cmd-devfile-storage
         - odo logout
 
     # Run service-catalog e2e tests
@@ -132,7 +129,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, watch, delete, registry, exec, test, env and log command integration tests"
+      name: "devfile catalog, create, push, watch, delete, registry, exec, test, env, debug and log command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make configure-supported-311-is
@@ -143,17 +140,8 @@ jobs:
         # - travis_wait make test-cmd-docker-devfile-url-pushtarget
         # These tests need cluster login as they will be interacting with a Kube environment
         - odo login -u developer
-        - travis_wait make test-cmd-devfile-catalog
-        - travis_wait make test-cmd-devfile-create
-        - travis_wait make test-cmd-devfile-push
-        - travis_wait make test-cmd-devfile-watch
-        - travis_wait make test-cmd-devfile-delete
-        - travis_wait make test-cmd-devfile-registry
-        - travis_wait make test-cmd-devfile-test
-        - travis_wait make test-cmd-devfile-log
-        - travis_wait make test-cmd-devfile-exec
-        - travis_wait make test-cmd-devfile-env
-        - travis_wait make test-cmd-devfile-config
+        - travis_wait 60 make test-integration-devfile
+        - travis_wait make test-cmd-devfile-debug-serial
         - odo logout
 
     - <<: *base-test
