Update Prestart int tests for PR feedback
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
@@ -22,7 +22,7 @@ components:
 commands:
   - exec:
       id: myPreStart
-      commandLine: echo I am a myPreStart
+      commandLine: echo hello test2 >> $PROJECTS_ROOT/test.txt
       component: tools
   - exec:
       id: secondPreStart
