implement new project and starterProject git spec
* fix starter project overriding devfile
 - The devfile is first downloaded and parsed in memory
 - Starter project is donwloaded into the current directory
 - Devfile is saved to the current directory
* perms 0644 for devfile is ok - nosec G306
* fix: not able to create component from local devfile
* fix: allow use of existing devfile
* fix: odo create in a directory with existing devfile
* fix: spinner not ended properly
* create and use ParseFromDataAndValidate
* show warning when someone uses revision

--- a/tests/examples/source/devfiles/nodejs/devfile-no-endpoints.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-no-endpoints.yaml
@@ -4,7 +4,8 @@ metadata:
 starterProjects:
   - name: nodejs-starter
     git:
-      location: "https://github.com/odo-devfiles/nodejs-ex.git"
+      remote:
+        origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
       name: runtime
