--- a/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
@@ -5,7 +5,8 @@ metadata:
 starterProjects:
   - name: springbootproject
     git:
-      location: "https://github.com/maysunfaisal/springboot.git"
+      remote:
+        origin: "https://github.com/maysunfaisal/springboot.git"
 components:
   - container:
       name: tools
