--- a/tests/examples/source/devfiles/nodejs/devfile-with-hotReload.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-hotReload.yaml
@@ -3,8 +3,8 @@ metadata:
   name: nodejs
 starterProjects:
   - name: nodejs-starter
-    git:
-      location: "https://github.com/odo-devfiles/nodejs-ex.git"
+    remote:
+        origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
       name: runtime
