--- a/tests/examples/source/devfiles/nodejs/devfileSourceMapping.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileSourceMapping.yaml
@@ -5,7 +5,8 @@ metadata:
 starterProjects:
   - name: nodejs-web-app
     git:
-      location: "https://github.com/odo-devfiles/nodejs-ex.git"
+      remote:
+        origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
       name: runtime
