--- a/tests/examples/source/devfilesV1/springboot/devfile-init.yaml
+++ b/tests/examples/source/devfilesV1/springboot/devfile-init.yaml
@@ -7,7 +7,8 @@ projects:
     name: springbootproject
     source:
       type: git
-      location: "https://github.com/maysunfaisal/springboot.git"
+      remote:
+        origin: "https://github.com/maysunfaisal/springboot.git"
 components:
   -
     type: chePlugin
