Add support for hot reload commands (#3785)
* Update schema and add support for hotreload

* Fix bug from switching debug to run mode

Update tests

* Address review comments and Add more tests

--- a/tests/examples/source/devfiles/nodejs/devfile-with-hotReload.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-hotReload.yaml
@@ -22,11 +22,18 @@ commands:
         isDefault: true
   - exec:
       id: devrun
-      attributes:
-        restart: "false"
       component: runtime
       commandLine: npm start
       workingDir: ${PROJECTS_ROOT}
+      hotReloadCapable: true
       group:
         kind: run
+        isDefault: true
+  - exec:
+      id: debugrun
+      component: runtime
+      commandLine: npm run debug
+      workingDir: ${PROJECTS_ROOT}
+      group:
+        kind: debug
         isDefault: true
